# plain-bitassets

./: .gitignore  Cargo.toml  Dockerfile  README.md  deny.toml  shell.nix  verify_lbtc.rs
.cargo/: config.toml
.github/workflows/: build_docker.yaml  check_lint_build.yaml
app/: Cargo.toml  app.rs  cli.rs  logs.rs  main.rs  rpc.rs  rpc_api.rs  rpc_server.rs
app/gui/: bitasset_explorer.rs  console_logs.rs  deposit.rs  encrypt_message.rs  logs.rs  miner.rs  mod.rs  simplicity.rs  util.rs
app/gui/activity/: bitasset_explorer.rs  block_explorer.rs  dutch_auction_explorer.rs  mempool_explorer.rs  mod.rs
app/gui/bitassets/: all_bitassets.rs  dutch_auction_explorer.rs  mod.rs  reserve_register.rs
app/gui/coins/: mod.rs  my_bitassets.rs  transfer_receive.rs  tx_builder.rs  tx_creator.rs  utxo_creator.rs  utxo_selector.rs
app/gui/lookup/: bitasset_explorer.rs  dutch_auction_explorer.rs  mod.rs
app/gui/messaging/: decrypt.rs  encrypt.rs  mod.rs
app/gui/parent_chain/: info.rs
app/gui/paymail/: inbox.rs  settings.rs
app/tests/: regtest.rs
cli/: Cargo.toml  lib.rs  main.rs
docs/: bitassets-lite-wallet-pr-notes.md
integration_tests/: Cargo.toml  README.md  example.env  ibd.rs  integration_test.rs  main.rs  setup.rs  unknown_withdrawal.rs  util.rs  vote.rs
lib/: Cargo.toml  archive.rs  authorization.rs  build.rs  elements_rpc.rs  lib.rs  mempool.rs  miner.rs  net.rs  node.rs  state.rs  wallet.rs
lib/net/: error.rs  mod.rs  peer.rs
lib/net/peer/: error.rs  message.rs  mod.rs  request_queue.rs  task.rs
lib/node/: mainchain_task.rs  mod.rs  net_task.rs
lib/state/: amm.rs  bitassets.rs  block.rs  dutch_auction.rs  error.rs  mod.rs  rollback.rs  two_way_peg_data.rs
lib/types/: address.rs  bitasset_data.rs  hashes.rs  keys.rs  mod.rs  output.rs  proto.rs  transaction.rs
lib/types/transaction/: error.rs  mod.rs  output.rs
rpc-api/: Cargo.toml  lib.rs  schema.rs  test.rs
