[package]
name = "plain_bitassets_app_cli"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
hex = { workspace = true }
http = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client"] }
plain_bitassets = { path = "../lib", features = ["clap"] }
plain_bitassets_app_rpc_api = { path = "../rpc-api" }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[lib]
name = "plain_bitassets_app_cli_lib"
path = "lib.rs"

[[bin]]
name = "plain_bitassets_app_cli"
path = "main.rs"
