[package]
name = "liquid_simplicity_app_cli"
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
clap = { workspace = true, features = ["derive"] }
hex = { workspace = true }
http = { workspace = true }
jsonrpsee = { workspace = true, features = ["http-client"] }
liquid_simplicity = { path = "../lib", features = ["clap"] }
liquid_simplicity_app_rpc_api = { path = "../rpc-api" }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
utoipa = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[lib]
name = "liquid_simplicity_app_cli_lib"
path = "lib.rs"

[[bin]]
name = "liquid_simplicity_app_cli"
path = "main.rs"
