[package]
name = "liquid_simplicity_integration_tests"
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dev-dependencies]
anyhow = { workspace = true }
bip300301_enforcer_lib = { workspace = true }
bip300301_enforcer_integration_tests = { workspace = true }
bitcoin = { workspace = true }
blake3 = { workspace = true }
clap = { workspace = true }
dotenvy = { workspace = true }
futures = { workspace = true }
jsonrpsee = { workspace = true }
libtest-mimic = { workspace = true }
liquid_simplicity = { path = "../lib", features = ["clap"] }
liquid_simplicity_app_rpc_api = { path = "../rpc-api" }
reserve-port = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-indicatif = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
tokio = { workspace = true, features = ["rt-multi-thread"] }

[features]
default = ["rustls"]
openssl = ["bip300301_enforcer_lib/openssl", "bip300301_enforcer_integration_tests/openssl"]
rustls = ["bip300301_enforcer_lib/rustls", "bip300301_enforcer_integration_tests/rustls"]

[lints]
workspace = true

# Examples are checked by default, but not run as tests by default
[[example]]
name = "integration_tests"
path = "main.rs"
harness = false
test = false
crate-type = ["bin"]
