[package]
name = "plain_bitassets"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[build-dependencies]
prost = "0.13.3"
prost-build = "0.13.3"
protox = "0.7.1"
tonic-build = "0.12.3"

[dependencies]
addr = "0.15.6"
anyhow = { version = "1.0.72", features = ["backtrace"] }
bech32 = "0.11.0"
bincode = "1.3.3"
bitcoin = { version = "0.32.4", features = ["serde"] }
blake3 = "1.4.1"
borsh = {version = "1.3.0", features = ["derive"] }
byteorder = "1.4.3"
bytes = "1.9.0"
clap = { version = "4.5.4", features = ["derive"], optional = true }
ed25519-dalek = { version = "2.1.1", features = ["batch", "serde"] }
fallible-iterator = "0.3.0"
futures = "0.3.30"
hashlink = { version = "0.10.0", features = ["serde_impl"] }
fraction = "0.14.0"
heed = "0.21.0"
hex = { version = "0.4.3", features = ["serde"] }
hex-literal = "0.4.1"
itertools = "0.12.0"
jsonrpsee = { version = "0.24.7" }
nonempty = { version = "0.11.0", features = ["serialize"] }
num = "0.4.1"
parking_lot = "0.12.1"
prost = "0.13.3"
prost-types = "0.13.3"
quinn = "0.11.6"
rayon = "1.7.0"
rcgen = "0.13.2"
rustls = { version = "0.23.21", default-features = false, features = ["ring"] }
serde = { version = "1.0.179", features = ["derive"] }
serde_json = "1.0.113"
serde_with = { version = "3.4.0" }
sha256 = "1.2.2"
strum = { version = "0.26.3", features = ["derive"], optional = true }
thiserror = "2.0.10"
tiny-bip39 = "2.0.0"
tokio = { version = "1.29.1", features = ["rt-multi-thread", "sync"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tokio-util = { version = "0.7.10", features = ["rt"] }
tonic = "0.12.3"
tracing = "0.1.40"
utoipa = { version = "5.2.0", features = ["non_strict_integers"] }
x25519-dalek = { version = "2.0.0", features = ["serde", "static_secrets"] }
zeromq = { version = "0.4.1", optional = true }

[features]
clap = ["dep:clap", "dep:strum"]
zmq = ["dep:zeromq"]

[lib]
name = "plain_bitassets"
path = "lib.rs"