[package]
name = "liquid_simplicity"
authors.workspace = true
description.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[build-dependencies]
prost = { workspace = true }
prost-build = { workspace = true }
protox = { workspace = true }
tonic-prost-build = { workspace = true }

[dependencies]
addr = { workspace = true }
anyhow = { workspace = true, features = ["backtrace"] }
async-lock = { workspace = true }
bech32 = { workspace = true }
bincode = { workspace = true }
bitcoin = { workspace = true, features = ["serde"] }
blake3 = { workspace = true }
borsh = { workspace = true, features = ["derive"] }
byteorder = { workspace = true }
bytes = { workspace = true }
dirs = { workspace = true }
clap = { workspace = true, features = ["derive"], optional = true }
ed25519-dalek = { workspace = true, features = ["batch", "serde"] }
educe = { workspace = true, features = ["Clone", "Debug"] }
error-fatality = { workspace = true }
fallible-iterator = { workspace = true }
futures = { workspace = true, features = ["alloc"] }
hashlink = { workspace = true, features = ["serde_impl"] }
fraction = { workspace = true }
governor = { workspace = true, features = ["quanta", "std"] }
heed = { workspace = true }
hex = { workspace = true, features = ["serde"] }
hex-literal = { workspace = true }
itertools = { workspace = true }
jsonrpsee = { workspace = true }
nonempty = { workspace = true, features = ["serialize"] }
num = { workspace = true }
parking_lot = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
quinn = { workspace = true }
rayon = { workspace = true }
reqwest = { workspace = true }
rcgen = { workspace = true }
rustls = { workspace = true, features = ["ring"] }
semver = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_with = { workspace = true, features = ["alloc", "macros"] }
smallvec = { workspace = true, features = ["write"] }
sneed = { workspace = true, features = ["observe"] }
strum = { workspace = true, features = ["derive"] }
thiserror = { workspace = true }
tiny-bip39 = { workspace = true }
tokio = { workspace = true, features = ["rt-multi-thread", "sync"] }
tokio-stream = { workspace = true, features = ["sync"] }
tokio-util = { workspace = true, features = ["rt"] }
tonic = { workspace = true }
tonic-prost = { workspace = true }
tracing = { workspace = true }
transitive = { workspace = true }
utoipa = { workspace = true, features = ["macros", "non_strict_integers"] }
x25519-dalek = { workspace = true, features = ["serde", "static_secrets"] }
zeromq = { workspace = true, optional = true }

[dependencies.libes]
workspace = true
features = ["AES256-GCM", "ECIES-MAC", "HMAC-SHA256", "x25519"]

[features]
clap = ["dep:clap"]
zmq = ["dep:zeromq"]

[lints]
workspace = true

[lib]
name = "liquid_simplicity"
path = "lib.rs"
