[package]
name = "plain_bitassets_app_rpc_api"
authors.workspace = true
edition.workspace = true
license-file.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
bitcoin = { version = "0.32.2", features = ["serde"] }
fraction = { version = "0.14.0", features = ["with-serde-support"] }
jsonrpsee = { version = "0.24.7", features = ["client", "macros", "server"] }
plain_bitassets = { path = "../lib" }
serde = { version = "1.0.179", features = ["derive"] }
serde_json = "1.0.113"
utoipa = "5.2.0"

[dependencies.l2l-openapi]
git = "https://github.com/Ash-L2L/l2l-openapi"
rev = "38c42ee637d083f1cdc807b546f6930b880dcad9"

[dev-dependencies]
anyhow = "1.0.72"

[lib]
name = "plain_bitassets_app_rpc_api"
path = "lib.rs"